OC-26753 Fix: Adjust modal vertical transform alignment

--- a/jsapp/js/components/common/modal.scss
+++ b/jsapp/js/components/common/modal.scss
@@ -29,7 +29,7 @@ $z-modal-x: 10;
   position: absolute;
   left: 50%;
   top: 15%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   min-width: 40%;
   max-width: 99%;
   max-height: 99%;
